err/yap.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yap'...
Compiling './lib/python3.5/site-packages/yap/Env.py'...
***   File "./lib/python3.5/site-packages/yap/Env.py", line 38
    print 'Env var {0} changed to {1}'.format( name, value )
                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/yap/Generator'...
Listing './lib/python3.5/site-packages/yap/Generator/Eclipse'...
Listing './lib/python3.5/site-packages/yap/Generator/Extensions'...
Compiling './lib/python3.5/site-packages/yap/Generator/Generator.py'...
***   File "./lib/python3.5/site-packages/yap/Generator/Generator.py", line 268
    print 'Error: unknown library', library.name
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/yap/Generator/Make'...
Compiling './lib/python3.5/site-packages/yap/Generator/Make/Make.py'...
***   File "./lib/python3.5/site-packages/yap/Generator/Make/Make.py", line 174
    print "Make::getExtensionForTarget : unknown target type '{0}'".format( target.type )
                                                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/yap/Generator/VisualStudio'...
Listing './lib/python3.5/site-packages/yap/Generator/VisualStudio/VCX'...
Compiling './lib/python3.5/site-packages/yap/Generator/VisualStudio/Windows.py'...
***   File "./lib/python3.5/site-packages/yap/Generator/VisualStudio/Windows.py", line 76
    print 'Error: unknown library type', library.type
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/yap/Generator/Xcode'...
Listing './lib/python3.5/site-packages/yap/Generator/Xcode/PBX'...
Compiling './lib/python3.5/site-packages/yap/Generator/Xcode/Xcode5.py'...
***   File "./lib/python3.5/site-packages/yap/Generator/Xcode/Xcode5.py", line 95
    print 'Warning: no {0} SDK found, Xcode path {1}, SDK path {2}'.format( platform, xcode, path )
                                                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/yap/Platform'...
Listing './lib/python3.5/site-packages/yap/Target'...
Compiling './lib/python3.5/site-packages/yap/Target/Folder.py'...
***   File "./lib/python3.5/site-packages/yap/Target/Folder.py", line 60
    print 'Warning: duplicated file reference', fileName
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/yap-0.5.7.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
